# disease-with-yolov5

./: app.py  pyproject.toml  requirements.txt
templates/: index.html
